--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <audio autoplay="autopaly">
-      <source src="cover.mp3" type="audio/mp3" />
+      <source src="Cover.mp3" type="audio/mp3" />
     </audio>
     <!-- 星空html -->
     <!-- <div> -->
