--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <audio autoplay="autopaly">
+    <audio autoplay="autoplay">
       <source src="Cover.mp3" type="audio/mp3" />
     </audio>
     <!-- 星空html -->
