--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- </div> -->
     <div class="title">
       <!-- EDIT HERE -->
-      <!--<h3 class="STARDUST1">2022</h3>-->
+      <h3 class="STARDUST1">L B Q</h3>
       <!--<h1 class="STARDUST2">MT &amp; BN</h1>-->
       <h3 class="STARDUST3">T Ạ <br> K H Á N H <br> L I N H <br> 🎂</h3>
       <img class="img" src="EDIT_ME.png" alt="JUNO_OKYO" />
