--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
 
   <body>
-    <audio autoplay="autoplay">
+    <!--<audio autoplay="autoplay">
       <source src="Cover.mp3" type="audio/mp3" />
-    </audio>
+    </audio>-->
     <!-- 星空html -->
     <!-- <div> -->
     <div class="container2">
